Sun Jul  2 10:39:00 2000  Corinna Vinschen  <corinna@vinschen.de>

	* winsup.h: Define MAX_SID_LEN and new MAX_HOST_NAME.
	* fork.cc (fork): Use above defines instead of numerical constants.
	* shared.cc (sec_user): Ditto.
	* shared.h (class pinfo): Ditto.
	* syscall.cc (seteuid): Ditto.
	* spawn.cc (_spawnve): Ditto. Eliminate conditional.
	(spawn_guts): Set child->uid = USHRT_MAX when user context will be
	changed in child process.
	* uinfo.cc (uinfo_init): Check for myself->uid instead of myself->psid
	to avoid reloading of /etc/passwd on process startup if ntsec is off.
	Use above defines instead of numerical constants.
	* security.cc: Move define for MAX_SID_LEN to winsup.h.

Sun Jul  2  1:57:00 2000  Corinna Vinschen  <corinna@vinschen.de>

	* uinfo.cc (uinfo_init): Eliminate calls to read_etc_group()
	and read_etc_passwd().

2000-06-28  Kazuhiro Fujieda  <fujieda@jaist.ac.jp>

	* assert.cc (__assert): Reduce dependency on newlib.
	* exec.cc: Eliminate unnecessary inclusion of ctype.h.
	* glob.c: Ditto.
	* hinfo.cc: Ditto.
	* init.cc: Ditto.
	* strace.cc: Ditto.
	* tty.cc: Ditto.
	* grp.cc (parse_grp): Eliminate atoi.
	* passwd.cc (grab_int): Ditto.
	* grp.cc (getgroups): Eliminate str{n,}casecmp.
	* path.cc (get_raw_device_number): Ditto.
	* path.cc (sort_by_native_name): Ditto.
	* spawn.cc (iscmd): Ditto.
	* uinfo.cc (internal_getlogin): Ditto.

Sat Jul  1 11:43:32 2000  Christopher Faylor <cgf@cygnus.com>

	* binmode.c (cygwin_premain0): Fix erroneous clearing of bit.
	* textmode.c (cygwin_premain0): Ditto.

Sat Jul  1 00:24:04 2000  Christopher Faylor <cgf@cygnus.com>

	* dcrt0.cc (_dll_crt0): Renamed from dll_crt0 ().
	* winsup.h: Accomodate above change.
	* cygwin.din: Ditto.
	* lib/cygwin_crt0.c: Ditto.

Fri Jun 30 23:21:40 2000  Christopher Faylor <cgf@cygnus.com>

	* Makefile.in: Use variables rather than configure constructs where
	appropriate.
	(LIBCOS): Find additional stub library stuff in their own subdirectory.